# Catfish

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/MarketPressure/: HermitianMLP.py  HermitianMLPViz.py  MarketPressure.py  VariableWindowHMM.py  VariableWindowHMMViz.py
src/MarketSentimentLTM/: MarketSentimentModel.py
src/catfish/: __init__.py  paths.py
src/catfish/AlphaModels/HMM/: VariableWindowHMM.py  VariableWindowHMMViz.py
src/catfish/AlphaModels/HermitianMLP/: HermitianMLP.py  HermitianMLPViz.py
src/catfish/AlphaModels/VariableMarketMassPredictor/: BenDanielDukeModel.py  BenDanielDukeModelViz.py
src/catfish/DataRetrieval/: CandleStickCollector.py  Collector.py  NewsCollector.py  SECCollector.py
src/catfish/MarketPressure/HMM/: VariableWindowHMM.py  VariableWindowHMMViz.py
src/catfish/MarketPressure/HermitianMLP/: HermitianMLP.py  HermitianMLPViz.py
src/catfish/MarketSentiment/: MarketSentimentModel.py  MarketSentimentModelViz.py
src/catfish/Viz/: PlotTheme.py  __init__.py
