[project]
name = "catfish"
version = "0.1.0"
description = ""
authors = [
    {name = "Daksh Kaul",email = "dakshkaul7790@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "hmmlearn (>=0.3.3,<0.4.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "yfinance (>=1.4.1,<2.0.0)",
    "pandas-stubs (>=3.0.3,<3.1.0)"
]

[tool.poetry]
packages = [{include = "catfish", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
